# taylorism

./: CONTRIBUTING.md  README.md  __init__.py  examples.py  pyproject.toml  schedulers.py  util.py
.github/workflows/: codeql.yml
docs/: conf.py  index.rst
src/taylorism/: __init__.py  examples.py  schedulers.py  util.py
tests/: test_taylorism.py
